--- a/css/amazeui.css
+++ b/css/amazeui.css
@@ -18,6 +18,8 @@
 html,
 body {
   min-height: 100%;
+  height: 100%;
+  width: 100%;
 }
 /**
  * 1. Prevent iOS text size adjust after orientation change, without disabling
@@ -372,6 +374,7 @@ optgroup {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+
 }
 td,
 th {
@@ -1733,9 +1736,9 @@ fieldset[disabled] .am-btn-default.am-active {
   border-color: #d9d9d9;
 }
 .am-btn-primary {
-  width:300px;
+  width:49%;
   float: left;
-  margin: 2px;
+  margin: 1px;
   color: #fff;
   background-color: #0e90d2;
   border-color: #0e90d2;
@@ -2058,7 +2061,7 @@ th {
   text-align: left;
 }
 .am-table {
-  width: 80%;
+  width: 100%;
   margin-bottom: 1.6rem;
   border-spacing: 0;
   border-collapse: separate;
@@ -14435,4 +14438,12 @@ tbody.am-collapse.am-in {
 .am-wechatpay .am-wechatpay-btn {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.main{
+  text-align: center;
+
+}
+#table{
+  text-align: center;
 }
